@@ -15,13 +15,14 @@
  */
 package org.springframework.modulith.test;
 
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -33,11 +34,13 @@ import org.springframework.boot.test.context.AnnotatedClassFinder;
 import org.springframework.core.annotation.AnnotatedElementUtils;
 import org.springframework.core.io.support.SpringFactoriesLoader;
 import org.springframework.modulith.core.ApplicationModule;
+import org.springframework.modulith.core.ApplicationModuleIdentifier;
 import org.springframework.modulith.core.ApplicationModules;
 import org.springframework.modulith.core.ApplicationModulesFactory;
 import org.springframework.modulith.core.JavaPackage;
 import org.springframework.modulith.core.PackageName;
 import org.springframework.modulith.test.ApplicationModuleTest.BootstrapMode;
+import org.springframework.util.Assert;
 import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
 import org.springframework.util.function.SingletonSupplier;
@@ -51,8 +54,8 @@ public class ModuleTestExecution implements Iterable<ApplicationModule> {
 	private static final Logger LOGGER = LoggerFactory.getLogger(ModuleTestExecution.class);
 	private static final ApplicationModulesFactory BOOTSTRAP;
 
-	private static Map<Class<?>, Class<?>> MODULITH_TYPES = new HashMap<>();
-	private static Map<Key, ModuleTestExecution> EXECUTIONS = new HashMap<>();
+	private static final Map<Class<?>, Class<?>> MODULITH_TYPES = new ConcurrentHashMap<>();
+	private static final Map<Key, ModuleTestExecution> EXECUTIONS = new ConcurrentHashMap<>();
 
 	static {
 
@@ -71,6 +74,7 @@ public class ModuleTestExecution implements Iterable<ApplicationModule> {
 
 	private final Supplier<List<JavaPackage>> basePackages;
 	private final Supplier<List<ApplicationModule>> dependencies;
+	private final Supplier<List<ApplicationModule>> includedModules;
 
 	private ModuleTestExecution(ApplicationModuleTest annotation, ApplicationModules modules, ApplicationModule module) {
 
@@ -99,6 +103,17 @@ public class ModuleTestExecution implements Iterable<ApplicationModule> {
 			return Stream.concat(bootstrapDependencies, extraIncludes.stream()).distinct().toList();
 		});
 
+		this.includedModules = SingletonSupplier.of(() -> {
+
+			var included = new ArrayList<ApplicationModule>();
+			included.add(module);
+			included.addAll(getDependencies());
+			included.addAll(getExtraIncludes());
+			included.addAll(modules.getSharedModules());
+
+			return included;
+		});
+
 		if (annotation.verifyAutomatically()) {
 			verify();
 		}
@@ -106,22 +121,28 @@ public class ModuleTestExecution implements Iterable<ApplicationModule> {
 
 	public static Supplier<ModuleTestExecution> of(Class<?> type) {
 
-		return () -> {
+		return SingletonSupplier.of(() -> {
 
 			var annotation = AnnotatedElementUtils.findMergedAnnotation(type, ApplicationModuleTest.class);
-			var packageName = type.getPackage().getName();
+
+			if (annotation == null) {
+				throw new IllegalStateException(
+						"%s not found on %s!".formatted(ApplicationModuleTest.class.getName(), type.getName()));
+			}
+
+			var packageName = PackageName.ofType(type).toString();
 			var modules = BOOTSTRAP.of(findSpringBootApplicationByClasses(annotation, type));
 			var moduleName = annotation.module();
 
 			var module = StringUtils.hasText(moduleName)
 					? modules.getModuleByName(moduleName).orElseThrow( //
-							() -> new IllegalStateException(String.format("Unable to find module %s!", moduleName)))
+							() -> new IllegalStateException("Unable to find module %s!".formatted(moduleName)))
 					: modules.getModuleForPackage(packageName).orElseThrow( //
-							() -> new IllegalStateException(String.format("Package %s is not part of any module!", packageName)));
+							() -> new IllegalStateException("Package %s is not part of any module!".formatted(packageName)));
 
 			return EXECUTIONS.computeIfAbsent(new Key(module.getBasePackage().getName(), annotation),
 					it -> new ModuleTestExecution(annotation, modules, module));
-		};
+		});
 	}
 
 	/**
@@ -201,6 +222,21 @@ public class ModuleTestExecution implements Iterable<ApplicationModule> {
 	 */
 	public List<ApplicationModule> getExtraIncludes() {
 		return extraIncludes;
+	}
+
+	/**
+	 * Returns whether the module with the given identifier is included in the current execution.
+	 *
+	 * @param identifier must not be {@literal null}.
+	 * @since 2.0
+	 */
+	public boolean isIncludedInExecution(ApplicationModuleIdentifier identifier) {
+
+		Assert.notNull(identifier, "ApplicationModuleIdentifier must not be null!");
+
+		return includedModules.get().stream()
+				.map(ApplicationModule::getIdentifier)
+				.anyMatch(identifier::equals);
 	}
 
 	/*
